@@ -1,6 +1,7 @@
 hildon-home (0.3.17~unreleased) unstable; urgency=low
   
   * Fixes: NB#105391, NB#105748 - Fix logical string for sms/chast messages.
+  * Fixes: NB#105332 - Fix desktop menu destroy bug.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 12 Mar 2009 15:30:07 +0200
 
